--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -1,4 +1,8 @@
 .form_container {
+  background: url(/alex-shutin-kKvQJ6rK6S4-unsplash.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -11,6 +15,10 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
+  background-color: rgb(0, 0, 0, 0.2);
+  backdrop-filter: blur(50px);
+  padding: 4rem;
+  border-radius: 10px;
 }
 
 .input {
