--- a/src/components/accueil/Accueil.css
+++ b/src/components/accueil/Accueil.css
@@ -1,13 +1,19 @@
 .accueil {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  background: url(/alex-shutin-kKvQJ6rK6S4-unsplash.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .accueil h1 {
-  color: orangered;
+  color: white;
   font-size: 4rem;
 }
 
@@ -18,11 +24,14 @@
 }
 
 .btn {
-  box-shadow: 0 0 8px lightgray;
+  /* box-shadow: 0 10px 10px lightgray; */
+  background-color: rgb(0, 0, 0, 0.2);
+  backdrop-filter: blur(50px);
   padding: 0.6rem 4rem;
-  border: 0.4px solid lightgray;
+  /* border: 0.4px solid lightgray; */
+  border: none;
   border-radius: 50px;
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 1.4rem;
 }
