--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -9,6 +9,13 @@
   justify-content: center;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -17,8 +24,9 @@
   justify-content: center;
   background-color: rgb(0, 0, 0, 0.2);
   backdrop-filter: blur(50px);
-  padding: 4rem;
+  padding: 1.5rem;
   border-radius: 10px;
+  margin-top: -0.7rem;
 }
 
 .input {
@@ -26,7 +34,6 @@
   padding: 0.6rem;
   font-size: 1.2rem;
   border: 0.5px solid lightgray;
-  border-radius: 5px;
   outline: none;
 }
 
@@ -42,8 +49,25 @@
   font-size: 1.2rem;
 }
 
+.user-icon {
+  /* position: absolute; */
+  background: white;
+  border-radius: 50%;
+  padding: 1rem;
+  z-index: 2;
+}
+
+.icon-user {
+  color: black;
+  font-size: 3rem;
+}
+
 @media screen and (max-width: 700px) {
   .input {
     width: 80vw;
+  }
+
+  .user-icon {
+    top: -24%;
   }
 }
