--- a/src/components/accueil/Accueil.css
+++ b/src/components/accueil/Accueil.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
   height: 100vh;
   background: url(/alex-shutin-kKvQJ6rK6S4-unsplash.jpg);
   background-position: center;
@@ -14,7 +15,7 @@
 
 .accueil h1 {
   color: white;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
 .btns {
@@ -24,16 +25,13 @@
 }
 
 .btn {
-  /* box-shadow: 0 10px 10px lightgray; */
   background-color: rgb(0, 0, 0, 0.2);
   backdrop-filter: blur(50px);
-  padding: 0.6rem 4rem;
-  /* border: 0.4px solid lightgray; */
+  padding: 0.6rem 2rem;
   border: none;
-  border-radius: 50px;
   color: white;
   text-decoration: none;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 @media screen and (max-width: 700px) {
