--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -50,11 +50,16 @@
 }
 
 .user-icon {
-  /* position: absolute; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background: white;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   padding: 1rem;
   z-index: 2;
+  box-shadow: 0 0 5px white;
 }
 
 .icon-user {
