--- a/src/components/Private/Navbar/navbar.css
+++ b/src/components/Private/Navbar/navbar.css
@@ -1,7 +1,11 @@
 .navbar {
   width: 20rem;
+  left: 0;
+  top: 0;
+  right: 0;
   height: 100vh;
-  background: #3b76ee;
+  position: fixed;
+  background: #0f5b97;
   border-radius: 0 20px 20px 0;
   padding: 2rem;
   display: flex;
