--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -39,9 +39,26 @@
 
 .btn_container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.question {
+  color: white;
+  border: none;
+  font-size: 1.2rem;
+  background: none;
+  display: flex;
+  gap: 0.6rem;
+}
+
+.link {
+  color: white;
 }
 
 .submit_btn {
+  width: fit-content;
   box-shadow: 0 0 8px lightgray;
   padding: 0.6rem 1rem;
   border: 0.4px solid lightgray;
