--- a/src/components/Private/Navbar/navbar.css
+++ b/src/components/Private/Navbar/navbar.css
@@ -11,6 +11,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 0 0 20px black;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .nav-container {
@@ -29,9 +36,26 @@
   gap: 2rem;
 }
 
+.active {
+  background: white;
+  padding: 0.6rem;
+  border-radius: 0 50px 50px 0px;
+}
+
+.active .icon {
+  color: black;
+}
+
+.active .title {
+  color: black;
+}
+
 .navlink {
   color: whitesmoke;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
