--- a/src/components/accueil/Accueil.css
+++ b/src/components/accueil/Accueil.css
@@ -32,6 +32,10 @@
   color: white;
   text-decoration: none;
   font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 @media screen and (max-width: 700px) {
