--- a/src/components/Private/Navbar/navbar.css
+++ b/src/components/Private/Navbar/navbar.css
@@ -12,12 +12,46 @@
   flex-direction: column;
   justify-content: space-between;
   box-shadow: 0 0 20px black;
+  z-index: 5;
+  transition: width;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in;
+}
+
+.navbar_small {
+  width: 6rem;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  position: fixed;
+  background: #0f5b97;
+  border-radius: 0 20px 20px 0;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 0 20px black;
+  z-index: 5;
+  transition: width;
+  transition-duration: 1.5s;
+  transition-timing-function: ease-out;
 }
 
 .title {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.logo,
+.title_1 {
+  display: block;
+  opacity: 1;
+  transition: opacity;
+  transition-duration: 1s;
+  transition-delay: 1s;
+  transition-timing-function: ease-in;
 }
 
 .nav-container {
@@ -53,6 +87,14 @@
   color: black;
 }
 
+.hidden {
+  display: none;
+  opacity: 0;
+  transition: display;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in;
+}
+
 .navlink {
   color: whitesmoke;
   text-decoration: none;
@@ -61,4 +103,58 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.menu_container {
+  background: #0f5b97;
+  position: absolute;
+  left: 20.5rem;
+  padding: 0.4rem;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 20px darkgray;
+  border-radius: 5px;
+  border: none;
+  transition: left;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+.menu_container_hidden {
+  background: #0f5b97;
+  position: absolute;
+  left: 6.5rem;
+  padding: 0.4rem;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0 20px darkgray;
+  border-radius: 5px;
+  border: none;
+  transition: left;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in;
+}
+
+.menu {
+  color: whitesmoke;
+  font-size: 2rem;
+}
+
+.nav_btn {
+  color: white;
+  background: none;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  padding: 0.4rem;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.143);
+  gap: 0.5rem;
 }
