--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .content {
+  width: 82.5vw;
   position: absolute;
   top: 0;
   right: 0;
@@ -11,11 +12,12 @@
 }
 
 .content_big {
+  width: 94vw;
   position: absolute;
   top: 0;
   right: 0;
   left: 6rem;
-  padding: 1rem 5rem;
+  padding: 1rem;
   z-index: 1;
   transition: left;
   transition-duration: 0.5s;
