--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   top: 0;
   right: 0;
   left: 20rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   z-index: 1;
   transition: left;
   transition-duration: 0.2s;
@@ -12,12 +12,12 @@
 }
 
 .content_big {
-  width: 94vw;
+  /* width: 94vw; */
   position: absolute;
   top: 0;
   right: 0;
   left: 6rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   z-index: 1;
   transition: left;
   transition-duration: 0.5s;
