--- a/src/components/Private/Dashboard/dashboard.css
+++ b/src/components/Private/Dashboard/dashboard.css
@@ -1,1 +1,25 @@
+.book_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  background: whitesmoke;
+  position: fixed;
+  top: 0;
+}
 
+.container h2 {
+  font-size: 1.8rem;
+}
+
+.book_form {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.books {
+  position: relative;
+  top: 10rem;
+}
